--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           <li>Working on adding new articles to the website using a Python script.</li>
         </ul>
 
+        <h3>React Coronavirus Tracker, <a href= "https://github.com/rpriour17/react-coronavirus-tracker"target="_blank">Personal</a></h3>
+        <ul>
+          <li>Coronavirus Dashboard Coded in React</li>
+          <li>Used Leaflet.js, Chart.js and Material-UI libraries.</li>
+        </ul>
+
         <h3>NBA Analytics Project, <a href= "https://sportsanalytics.berkeley.edu/" target="_blank">Sports Analytics Group, Berkeley</a></h3>
         <ul>
           <li>Worked on a project which involved using K-Means Clustering to 
