--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://www.linkedin.com/in/romain-priour-aa148b17b" target="_blank"><i class="fa fa-linkedin", style="font-size:36px"></i></a>
         <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope", style="font-size:36px"></i></a>
         </p>
-        <p id="Resume"><a href="assets/Romain_Priour_Resume.pdf" target="blank"><b>Resume</b></a></p>
+        <p id="Resume"><a href="assets/resume2.pdf" target="blank"><b>Resume</b></a></p>
       </header>
       <section>
 
