--- a/index.html
+++ b/index.html
@@ -22,41 +22,49 @@
         <a href="https://www.linkedin.com/in/romain-priour-aa148b17b" target="_blank"><i class="fa fa-linkedin", style="font-size:36px"></i></a>
         <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope", style="font-size:36px"></i></a>
         </p>
-        <p id="Resume"><a href="assets/resume2.pdf" target="blank"><b>Resume</b></a></p>
+        <p id="Resume"><a href="assets/Romain.Priour.Resume.pdf" target="blank"><b>Resume</b></a></p>
       </header>
       <section>
 
-        <p>Hi! My name is Romain Priour, and I am a third-year undergraduate (intended) Computer Science student at UC Berkeley. My interests 
-          include back-end web development, database handling as well as data mining and analytics using Machine Learning. Outside of school and 
+        <p>Hi! My name is Romain Priour, and I am a Senior at UC Berkeley studying Computer Science. My interests 
+          include full stack development, machine learning and data analytics specifically in the field of sports. Outside of school and 
           work I like to go to the beach, go on hikes, hang out with friends and discover new music genres. 
         </p>
 
-        <h2>Professional Experience</h2>
+        <h2>Professional Experience</h2>  
+        <h3>Software Developer, <a href= "https://www.sap.com/index.html" target="_blank">SAP</a></h3>
+        <ul>
+          <li>Engineered a platform with a React frontend and a Python Flask backend to match new grad hires to engineering teams as part of
+            SAP’s rotational program, SAP Next Talent, improving process efficiency by 60% and impacting over 200 individual SAP employees.</li>
+          <li>Designed a PostgreSQL relational database schema and utilized SQLAlchemy to implement the database for this platform, which
+            leverages over 1000 data points.</li>
+          <li>Utilized SAP Cloud Foundry to migrate this customized platform and its database from development phase to production.</li>
+        <li>Influenced new development methodology to senior and executive leadership based on initial project scope.</li>
+        <li>Generated end-to-end project roadmap through various medias for the enablement of future project adoption and current
+          maintenance.</li>
+      </ul>
+
         <h3>Software Developer, <a href= "https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a></h3>
         <ul>
-          <li>Worked as a remote Software Developer for Savvy, a startup dating game on the App Store.</li>
-          <li>Implemented and analyzed extensive logging methods in TypeScript to find and solve a bug involving an issue with the game not properly assigning back-end states.</li>
-          <li>Created a data analytics panel using the Flask Framework, by making requests to the mySQL database, cleaning the data and using 
-            the front end library Chart.js to graph the data.</li>
-          <li>Helped implement the back-end functionality of the reporting feature for the app, mainly by creating connections between the 
-            Swift front end code and TypesScript back end. 
+          <li>Solved major bugs related to state management in the application’s Node.JS backend.</li>
+          <li>Upgraded the searching algorithm to gradually increase the search radius by 25 miles if no games are found.</li>
+          <li>Engineered a data analytics dashboard using the Python Flask framework which pulls data from the app’s MySQL database and
+            displays daily active users and demographic data for over 10,000 players.</li>
+          <li>Designed a banning feature in JavaScript to block players that have been reported over 3 times, which has been used to report
+            over 100 players.
           </li>
         </ul>
 
         <h2>Projects</h2>
         <h3>Web Development, <a href= "https://sportsanalytics.berkeley.edu/"target="_blank">Sports Analytics Group, Berkeley</a></h3>
         <ul>
-          <li>Currently working on remodeling the outdated website using the group's HTML template.</li>
-          <li>Working on adding new articles to the website using a Python script.</li>
+          <li>Designed and maintained sportsanalytics.berkeley.edu, which involved updating forms and adding new articles to the main page.</li>
+          <li> As part of the Projects Division, utilized a K-Means Clustering algorithm to redefine NBA positions and find the most effective
+            team composition.</li>
+          <li>Created a Python script to scrape over 10,000 lines of CSV data from basketball-reference.com and conducted principal
+            component analysis to reduce the dimensionality of the data.</li>
         </ul>
 
-
-        <h3>NBA Analytics Project, <a href= "https://sportsanalytics.berkeley.edu/" target="_blank">Sports Analytics Group, Berkeley</a></h3>
-        <ul>
-          <li>Worked on a project which involved using K-Means Clustering to 
-            remodel the current NBA positions and determine the most effective team compositions in the NBA.</li>
-          <li>Created various visualizations to better understand the nature of each position in the NBA.</li>
-        </ul>
 
         <h3>Gitlet, CS 61B</h3>
         <ul>
@@ -66,14 +74,19 @@
 
 
         <h2>Teaching Experience</h2>
+        <h3>TA: <a href="https://sp21.datastructur.es/" target ="_blank">Data Structures and Algorithms (CS 61B), Spring 2021</a></h3>
         <h3>TA: <a href="http://fa20.datastructur.es/index.html" target ="_blank">Data Structures and Algorithms (CS 61B), Fall 2020</a></h3>
-
-        <h2>CourseWork</h2>
+        
+        <h2>Coursework</h2>
 
         <h3>Computer Science</h3>
         <ul>
-          <li><b>*CS 70:</b> Discrete Mathematics and Probability Theory</li>
-          <li><b>*CS C100:</b> Principles and Techniques of Data Science</li>
+          <li><b>* CS 188</b>Introduction to Artifical Intelligence</li>
+          <li><b>* CS 186</b>Introduction to Database Systems</li>
+          <li><b>* EE 16B</b>Designing Information Devices and Systems</li>
+          <li><b>CS 61C</b> Machine Structures</li>
+          <li><b>CS 70:</b> Discrete Mathematics and Probability Theory</li>
+          <li><b>CS C100:</b> Principles and Techniques of Data Science</li>
           <li><b>CS 61B:</b> Data Structures and Algorithms</li>
           <li><b>CS C8:</b> The Foundations of Data Science</li>
           <li><b>Engineering 7:</b> Intro to Computer Programming for Scientists and Engineers</li>
