--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
       </header>
       <section>
 
-        <p>Hi! My name is Romain Priour, and I am a Senior at UC Berkeley studying Computer Science. My interests 
-          include full stack development, machine learning and data analytics specifically in the field of sports. Outside of school and 
+        <p>Hi! My name is Romain Priour, and I am a graduate of the UC Berkeley Class of 2022, with a Bachelors in Computer Science. My interests 
+          include full stack development with an emphasis on backend, machine learning and data analytics specifically in the field of sports. Outside of school and 
           work I like to go to the beach, go on hikes, hang out with friends and discover new music genres. 
         </p>
 
-        <h2>Professional Experience</h2>  
-        <h3>Software Developer, <a href= "https://www.sap.com/index.html" target="_blank">SAP</a></h3>
+        <h2>Professional Experience</h2> 
+        <h3>Mobile Integration Developer Intern,  <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : June 2022 - Present </h3>
+        <ul>
+          <li>Joined the Mobile Experience Engineering team to work on backend API services.</li>
+        </ul>
+        <h3>Software Developer Intern, <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : April 2021 - September 2021</h3>
         <ul>
           <li>Engineered a platform with a React frontend and a Python Flask backend to match new grad hires to engineering teams as part of
             SAP’s rotational program, SAP Next Talent, improving process efficiency by 60% and impacting over 200 individual SAP employees.</li>
@@ -44,7 +48,7 @@
           maintenance.</li>
       </ul>
 
-        <h3>Software Developer, <a href= "https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a></h3>
+        <h3>Software Developer, <a href= "https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a> : April 2020 - December 2020 </h3>
         <ul>
           <li>Solved major bugs related to state management in the application’s Node.JS backend.</li>
           <li>Upgraded the searching algorithm to gradually increase the search radius by 25 miles if no games are found.</li>
@@ -56,7 +60,7 @@
         </ul>
 
         <h2>Projects</h2>
-        <h3>Web Development, <a href= "https://sportsanalytics.berkeley.edu/"target="_blank">Sports Analytics Group, Berkeley</a></h3>
+        <h3>Web Development, <a href= "https://sportsanalytics.berkeley.edu/"target="_blank">Sports Analytics Group, Berkeley</a> : January 2020 - December 2020 </h3>
         <ul>
           <li>Designed and maintained sportsanalytics.berkeley.edu, which involved updating forms and adding new articles to the main page.</li>
           <li> As part of the Projects Division, utilized a K-Means Clustering algorithm to redefine NBA positions and find the most effective
@@ -76,15 +80,24 @@
         <h2>Teaching Experience</h2>
         <h3>TA: <a href="https://sp21.datastructur.es/" target ="_blank">Data Structures and Algorithms (CS 61B), Spring 2021</a></h3>
         <h3>TA: <a href="http://fa20.datastructur.es/index.html" target ="_blank">Data Structures and Algorithms (CS 61B), Fall 2020</a></h3>
+        <ul>
+          <li>Conducted biweekly office hours and taught weekly labs and discussion sections of around 30 students.</li>
+          <li>Proctored and graded exams for a class of over 1600 students.</li>
+          <li>Completed quality assurance tests for exams, lab assignments and discussion worksheets.</li>
+          <li>Upgraded the auto grader’s API queries to our course website for written assignments, boosting grading efficiency.</li>
+          <li>Resolved student issues with Git repositories and privacy/access rights.</li>
+        </ul>
         
         <h2>Coursework</h2>
 
         <h3>Computer Science</h3>
         <ul>
-          <li><b>* CS 188</b>Introduction to Artifical Intelligence</li>
-          <li><b>* CS 186</b>Introduction to Database Systems</li>
-          <li><b>* EE 16B</b>Designing Information Devices and Systems</li>
-          <li><b>CS 61C</b> Machine Structures</li>
+          <li><b>CS 188:</b> Introduction to Artifical Intelligence</li>
+          <li><b>CS 161:</b> Computer Security</li>
+          <li><b>CS 186:</b> Introduction to Database Systems</li>
+          <li><b>Info 159:</b> Natural Language Processing</li>
+          <li><b>EE 16B:</b> Designing Information Devices and Systems</li>
+          <li><b>CS 61C:</b> Machine Structures</li>
           <li><b>CS 70:</b> Discrete Mathematics and Probability Theory</li>
           <li><b>CS C100:</b> Principles and Techniques of Data Science</li>
           <li><b>CS 61B:</b> Data Structures and Algorithms</li>
@@ -103,10 +116,8 @@
         <h3>Miscellaneous</h3>
         <ul>
           <li><b>UGBA 104:</b> Introduction to Business Analytics</li>
-          <li><b>CBE 140:</b>Introduction to Chemical Process Analysis</li>
+          <li><b>CBE 140:</b> Introduction to Chemical Process Analysis</li>
         </ul>
-
-        <h4>*=Currently Taking</h4>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
