--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>Romain Priour</h1>
-        <p><img src="assets/Picture.jpg"></p>
+        <p><img src="assets/SNT-Headshots-6545.jpg"></p>
         <p><a href="https://github.com/rpriour17" target="_blank"><i class="fa fa-github", style="font-size:36px"></i></a>
         <a href="https://www.linkedin.com/in/romain-priour-aa148b17b" target="_blank"><i class="fa fa-linkedin", style="font-size:36px"></i></a>
         <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope", style="font-size:36px"></i></a>
@@ -26,15 +26,49 @@
       </header>
       <section>
 
-        <p>Hi! My name is Romain Priour, and I am a graduate of the UC Berkeley Class of 2022, with a Bachelors in Computer Science. My interests 
-          include full stack development with an emphasis on backend, machine learning and data analytics specifically in the field of sports. Outside of school and 
+        <p>Hi! My name is Romain Priour, and I am a graduate of the UC Berkeley Class of 2022, with a Bachelors in Computer Science. My professional interests 
+          include full stack and mobile development with an emphasis on backend, machine learning and data analytics. I also love the product side of 
+          software development, and have a passion for working with product managers and stakeholders to provide the most desired functionality. Outside of school and 
           work I like to go to the beach, go on hikes, hang out with friends and discover new music genres. 
         </p>
 
         <h2>Professional Experience</h2> 
-        <h3>Mobile Integration Developer Intern,  <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : June 2022 - Present </h3>
+        <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP Next Talent</a> September 2022 - Present </h3>
+        <h4>Second Rotation: March 2022 - Present</h4>
         <ul>
-          <li>Joined the Mobile Experience Engineering team to work on backend API services.</li>
+        <li>
+          Leverage the SAPUI5 Javascript framework to lead the design and development of an entirely new feature within the SuccessFactors Onboarding 2.0 product, a human capital management tool with over 2,200 corporate customers worldwide spread out over 6,000 unique tenants.
+        </li>
+        <li>
+          Utilize QUnit, Opa5 and Cucumber to ensure 85% coverage from automated unit and integration tests for said new feature.
+        </li>
+        <li>
+          Assist with the design and implementation of APIs to serve data efficiently to our application.
+        </li>
+        </ul>
+        <h4>First Rotation: September 2022 - March 2023</h4>
+        <ul>
+          <li>Assisted in the development and launch of the native Android app Sales and Service Cloud, a CRM tool with over 20 corporate customers worldwide.
+          </li>
+          <li>
+            Leveraged JUnit and Mockito to increase unit test coverage by over 30% on over 8,000 lines of code during the 15 days before the release deadline.
+          </li>
+          <li>
+            Engineered a scalable and highly reusable caching framework for list objects which improved the loading efficiency of certain pages by over 80%.
+          </li>
+          <li>
+            Coordinated with UX designers and product managers to implement  features such as haptic feedback, UI animations and entirely new screens on the app, leveraging Figma sketches and customer requests to provide the exact desired user experience.
+          </li>
+          <li>
+            Designed a POC for a PWA tablet app and authored over 8 pages of detailed documentation which was presented to upper management.
+          </li>
+        </ul>
+        <h3>Mobile Integration Developer Intern,  <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : June 2022 - September 2022 </h3>
+        <ul>
+          <li>Developed a POC for a platform using SAP UI5 which enables users to configure the settings for the various applications present within the SAP Product and Mobile Engineering ecosystem.</li>
+          <li>Worked in tandem with backend developers to design, consume and update the OData services that supply data to the application.</li>
+          <li>Utilized Figma to design the UI and process flow for the application, making use of the SAP Fiori guidelines to ensure the application is coherent, fluid, and simple to navigate.</li>
+          <li>Designed multiple forms of documentation including a README and video presentations to ensure a smooth handover process.</li>
         </ul>
         <h3>Software Developer Intern, <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : April 2021 - September 2021</h3>
         <ul>
