--- a/index.html
+++ b/index.html
@@ -1,162 +1,207 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Romain Priour</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Romain Priour</title>
+
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width">
+  <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Romain Priour</h1>
-        <p><img src="assets/SNT-Headshots-6545.jpg"></p>
-        <p><a href="https://github.com/rpriour17" target="_blank"><i class="fa fa-github", style="font-size:36px"></i></a>
-        <a href="https://www.linkedin.com/in/romain-priour-aa148b17b" target="_blank"><i class="fa fa-linkedin", style="font-size:36px"></i></a>
-        <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope", style="font-size:36px"></i></a>
-        </p>
-        <p id="Resume"><a href="assets/Romain.Priour.Resume.pdf" target="blank"><b>Resume</b></a></p>
-      </header>
-      <section>
+</head>
 
-        <p>Hi! My name is Romain Priour, and I am a graduate of the UC Berkeley Class of 2022, with a Bachelors in Computer Science. My professional interests 
-          include full stack and mobile development with an emphasis on backend, machine learning and data analytics. I also love the product side of 
-          software development, and have a passion for working with product managers and stakeholders to provide the most desired functionality. Outside of school and 
-          work I like to go to the beach, go on hikes, hang out with friends and discover new music genres. 
-        </p>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Romain Priour</h1>
+      <p><img src="assets/SNT-Headshots-6545.jpg"></p>
+      <p><a href="https://github.com/rpriour17" target="_blank"><i class="fa fa-github" ,
+            style="font-size:36px"></i></a>
+        <a href="https://www.linkedin.com/in/romainpriour" target="_blank"><i class="fa fa-linkedin" ,
+            style="font-size:36px"></i></a>
+        <a href="mailto:rpriour17@gmail.com"><i class="fa fa-envelope" , style="font-size:36px"></i></a>
+      </p>
+      <p id="Resume"><a href="assets/Romain.Priour.Resume.pdf" target="blank"><b>Resume</b></a></p>
+    </header>
+    <section>
 
-        <h2>Professional Experience</h2> 
-        <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP Next Talent</a> September 2022 - Present </h3>
-        <h4>Second Rotation: March 2022 - Present</h4>
-        <ul>
+      <p>Hi! My name is Romain Priour, and I am Software Engineer with
+        2+ years of full stack experience specializing in Java, Python and Javascript, and a graduate of the UC Berkeley
+        Class of 2022 with a Bachelors in
+        Computer Science. I am a motivated learner who
+        enjoys building and maintaining scalable
+        and robust enterprise applications. I also love the product side of software development, and have a passion for
+        working with product managers and stakeholders
+        to provide the most desired functionality. My hobbies include playing tennis, lifting weights, going to the
+        beach, and I am a very outgoing person who loves spending time
+        with my friends.
+      </p>
+
+      <h2>Professional Experience</h2>
+      <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP
+          Next Talent</a> September 2022 - Present </h3>
+      <h4>Second + Third Rotation: March 2023 - Present</h4>
+      <ul>
         <li>
-          Leverage the SAPUI5 Javascript framework to lead the design and development of an entirely new feature within the SuccessFactors Onboarding 2.0 product, a human capital management tool with over 2,200 corporate customers worldwide spread out over 6,000 unique tenants.
+          Leading the development of the new custom tasks feature for the Onboarding 2.0 component of Successfactors,
+          SAP’s human capital management software with over 2,200 corporate customers spread over 6,000+ tenants.
         </li>
         <li>
-          Utilize QUnit, Opa5 and Cucumber to ensure 85% coverage from automated unit and integration tests for said new feature.
+          Leveraging our in-house automation testing framework to increase test coverage of APIs and UI components to
+          over 85%.
         </li>
         <li>
-          Assist with the design and implementation of APIs to serve data efficiently to our application.
+          Technologies: Java (Spring), Javascript (SAPUI5)
         </li>
-        </ul>
-        <h4>First Rotation: September 2022 - March 2023</h4>
-        <ul>
-          <li>Assisted in the development and launch of the native Android app Sales and Service Cloud, a CRM tool with over 20 corporate customers worldwide.
-          </li>
-          <li>
-            Leveraged JUnit and Mockito to increase unit test coverage by over 30% on over 8,000 lines of code during the 15 days before the release deadline.
-          </li>
-          <li>
-            Engineered a scalable and highly reusable caching framework for list objects which improved the loading efficiency of certain pages by over 80%.
-          </li>
-          <li>
-            Coordinated with UX designers and product managers to implement  features such as haptic feedback, UI animations and entirely new screens on the app, leveraging Figma sketches and customer requests to provide the exact desired user experience.
-          </li>
-          <li>
-            Designed a POC for a PWA tablet app and authored over 8 pages of detailed documentation which was presented to upper management.
-          </li>
-        </ul>
-        <h3>Mobile Integration Developer Intern,  <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : June 2022 - September 2022 </h3>
-        <ul>
-          <li>Developed a POC for a platform using SAP UI5 which enables users to configure the settings for the various applications present within the SAP Product and Mobile Engineering ecosystem.</li>
-          <li>Worked in tandem with backend developers to design, consume and update the OData services that supply data to the application.</li>
-          <li>Utilized Figma to design the UI and process flow for the application, making use of the SAP Fiori guidelines to ensure the application is coherent, fluid, and simple to navigate.</li>
-          <li>Designed multiple forms of documentation including a README and video presentations to ensure a smooth handover process.</li>
-        </ul>
-        <h3>Software Developer Intern, <a href= "https://www.sap.com/index.html" target="_blank">SAP</a> : April 2021 - September 2021</h3>
-        <ul>
-          <li>Engineered a platform with a React frontend and a Python Flask backend to match new grad hires to engineering teams as part of
-            SAP’s rotational program, SAP Next Talent, improving process efficiency by 60% and impacting over 200 individual SAP employees.</li>
-          <li>Designed a PostgreSQL relational database schema and utilized SQLAlchemy to implement the database for this platform, which
-            leverages over 1000 data points.</li>
-          <li>Utilized SAP Cloud Foundry to migrate this customized platform and its database from development phase to production.</li>
-        <li>Influenced new development methodology to senior and executive leadership based on initial project scope.</li>
-        <li>Generated end-to-end project roadmap through various medias for the enablement of future project adoption and current
-          maintenance.</li>
+      </ul>
+      <h4>First Rotation: September 2022 - March 2023</h4>
+      <ul>
+        <li>Worked on the release of SAP SalesCloud, a mobile CRM tool with over 20 corporate customers on launch.</li>
+        <li>
+          Increased test coverage by over 30% in the few weeks between joining the team and the release deadline,
+          enabling the team to reach the threshold required for release.
+        </li>
+        <li>
+          Engineered a scalable and reusable caching framework, improving the loading efficiency of various pages by
+          over 80%.
+        </li>
+        <li>
+          Technologies: Kotlin
+        </li>
+      </ul>
+      <h3>Mobile Integration Developer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : June
+        2022 - September 2022 </h3>
+      <ul>
+        <li>
+          Developed a POC using SAPUI5 and Odata services for a platform which enables users to modify the
+          configurations of the various applications present within the SAP mobile engineering ecosystem.
+        </li>
+        <li>
+          Utilized Figma to design the UI and process flow of the application and created over an hour of video content
+          and 25 pages of text documentation.
+        </li>
+      </ul>
+      <h3>Full Stack Software Engineer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : April
+        2021 -
+        September 2021</h3>
+      <ul>
+        <li>
+          Designed a platform to match new hires to engineering teams, improving process efficiency by over 75% and
+          impacting over 1,000 SAP employees.
+        </li>
+        <li>
+          Leveraged SAP Cloud Foundry and hyperscalers to migrate the platform and its database from development to
+          production.
+        </li>
+        <li>
+          Standardized the onboarding and deployment process by containerizing the application, reducing setup time by
+          over 95% and eliminating the risk of human error in deployment.
+        </li>
+        <li>
+          Technologies: Python (Flask), React, Docker, PostgreSQL
+        </li>
       </ul>
 
-        <h3>Software Developer, <a href= "https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a> : April 2020 - December 2020 </h3>
-        <ul>
-          <li>Solved major bugs related to state management in the application’s Node.JS backend.</li>
-          <li>Upgraded the searching algorithm to gradually increase the search radius by 25 miles if no games are found.</li>
-          <li>Engineered a data analytics dashboard using the Python Flask framework which pulls data from the app’s MySQL database and
-            displays daily active users and demographic data for over 10,000 players.</li>
-          <li>Designed a banning feature in JavaScript to block players that have been reported over 3 times, which has been used to report
-            over 100 players.
-          </li>
-        </ul>
+      <h3>Software Developer, <a href="https://www.savvydatinggame.com/" target="_blank">Savvy Dating App</a> : April
+        2020 - December 2020 </h3>
+      <ul>
+        <li>Upgraded the search algorithm to gradually increase the radius by 25 miles if no games are found.
+        </li>
+        <li>Engineered a data analytics dashboard using the Python Flask framework which pulls data from the app’s MySQL
+          database and displays daily active users and demographic data for over 10,000 players.</li>
+        <li>Designed a banning feature in JavaScript to block players that have been reported over 3 times, which has
+          been used to report
+          over 100 players.
+        </li>
+      </ul>
 
-        <h2>Projects</h2>
-        <h3>Web Development, <a href= "https://sportsanalytics.berkeley.edu/"target="_blank">Sports Analytics Group, Berkeley</a> : January 2020 - December 2020 </h3>
-        <ul>
-          <li>Designed and maintained sportsanalytics.berkeley.edu, which involved updating forms and adding new articles to the main page.</li>
-          <li> As part of the Projects Division, utilized a K-Means Clustering algorithm to redefine NBA positions and find the most effective
-            team composition.</li>
-          <li>Created a Python script to scrape over 10,000 lines of CSV data from basketball-reference.com and conducted principal
-            component analysis to reduce the dimensionality of the data.</li>
-        </ul>
+      <h2>Skills</h2>
+      <ul>
+        <b>Programming Languages:</b> Java (Proficient), JavaScript (Proficient), Python (Proficient), Kotlin (Familiar)
+      </ul>
+      <ul>
+        <b>Technologies:</b> Spring, React, Flask, PostgreSQL, MongoDB, Docker, Kubernetes, JUnit
+      </ul>
+
+      <h2>Projects</h2>
+      <h3>Web Development, <a href="https://sportsanalytics.berkeley.edu/" target="_blank">Sports Analytics Group,
+          Berkeley</a> : January 2020 - December 2020 </h3>
+      <ul>
+        <li>Designed and maintained sportsanalytics.berkeley.edu, which involved updating forms and adding new articles
+          to the main page.</li>
+        <li> As part of the Projects Division, utilized a K-Means Clustering algorithm to redefine NBA positions and
+          find the most effective
+          team composition.</li>
+        <li>Created a Python script to scrape over 10,000 lines of CSV data from basketball-reference.com and conducted
+          principal
+          component analysis to reduce the dimensionality of the data.</li>
+      </ul>
 
 
-        <h3>Gitlet, CS 61B</h3>
-        <ul>
-          <li>Implemented a fully working version control system written in Java, similar to Git.</li>
-          <li>This program supported functions like adding, committing, merging branches, and pushing/pulling to remote repositories.</li>
-        </ul>
+      <h3>Gitlet, CS 61B</h3>
+      <ul>
+        <li>Implemented a fully working version control system written in Java, similar to Git.</li>
+        <li>This program supported functions like adding, committing, merging branches, and pushing/pulling to remote
+          repositories.</li>
+      </ul>
 
 
-        <h2>Teaching Experience</h2>
-        <h3>TA: <a href="https://sp21.datastructur.es/" target ="_blank">Data Structures and Algorithms (CS 61B), Spring 2021</a></h3>
-        <h3>TA: <a href="http://fa20.datastructur.es/index.html" target ="_blank">Data Structures and Algorithms (CS 61B), Fall 2020</a></h3>
-        <ul>
-          <li>Conducted biweekly office hours and taught weekly labs and discussion sections of around 30 students.</li>
-          <li>Proctored and graded exams for a class of over 1600 students.</li>
-          <li>Completed quality assurance tests for exams, lab assignments and discussion worksheets.</li>
-          <li>Upgraded the auto grader’s API queries to our course website for written assignments, boosting grading efficiency.</li>
-          <li>Resolved student issues with Git repositories and privacy/access rights.</li>
-        </ul>
-        
-        <h2>Coursework</h2>
+      <h2>Teaching Experience</h2>
+      <h3>TA: <a href="https://sp21.datastructur.es/" target="_blank">Data Structures and Algorithms (CS 61B), Spring
+          2021</a></h3>
+      <h3>TA: <a href="http://fa20.datastructur.es/index.html" target="_blank">Data Structures and Algorithms (CS 61B),
+          Fall 2020</a></h3>
+      <ul>
+        <li>Conducted biweekly office hours and taught weekly labs and discussion sections of around 30 students.</li>
+        <li>Proctored and graded exams for a class of over 1600 students.</li>
+        <li>Completed quality assurance tests for exams, lab assignments and discussion worksheets.</li>
+        <li>Upgraded the auto grader’s API queries to our course website for written assignments, boosting grading
+          efficiency by 20%.</li>
+        <li>Resolved student issues with Git repositories and privacy/access rights.</li>
+      </ul>
 
-        <h3>Computer Science</h3>
-        <ul>
-          <li><b>CS 188:</b> Introduction to Artifical Intelligence</li>
-          <li><b>CS 161:</b> Computer Security</li>
-          <li><b>CS 186:</b> Introduction to Database Systems</li>
-          <li><b>Info 159:</b> Natural Language Processing</li>
-          <li><b>EE 16B:</b> Designing Information Devices and Systems</li>
-          <li><b>CS 61C:</b> Machine Structures</li>
-          <li><b>CS 70:</b> Discrete Mathematics and Probability Theory</li>
-          <li><b>CS C100:</b> Principles and Techniques of Data Science</li>
-          <li><b>CS 61B:</b> Data Structures and Algorithms</li>
-          <li><b>CS C8:</b> The Foundations of Data Science</li>
-          <li><b>Engineering 7:</b> Intro to Computer Programming for Scientists and Engineers</li>
-        </ul>
+      <h2>Coursework</h2>
 
-        <h3>Mathematics + Sciences </h3>
-        <ul>
-          <li><b>Math 54:</b> Linear Algebra and Differential Equations</li>
-          <li><b>Math 53:</b> Multivariable Calculus</li>
-          <li><b>Math 1A/1B:</b> Single Variable Calculus</li>
-          <li><b>Chem 4A/4B :</b> General Chemistry and Quantitative Analysis</li>
-          <li><b>Physics 7A/7B  :</b> Physics for Scientists and Engineers</li>
-        </ul>
-        <h3>Miscellaneous</h3>
-        <ul>
-          <li><b>UGBA 104:</b> Introduction to Business Analytics</li>
-          <li><b>CBE 140:</b> Introduction to Chemical Process Analysis</li>
-        </ul>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-  </body>
+      <h3>Computer Science</h3>
+      <ul>
+        <li><b>CS 188:</b> Introduction to Artifical Intelligence</li>
+        <li><b>CS 161:</b> Computer Security</li>
+        <li><b>CS 186:</b> Introduction to Database Systems</li>
+        <li><b>Info 159:</b> Natural Language Processing</li>
+        <li><b>EE 16B:</b> Designing Information Devices and Systems</li>
+        <li><b>CS 61C:</b> Machine Structures</li>
+        <li><b>CS 70:</b> Discrete Mathematics and Probability Theory</li>
+        <li><b>CS C100:</b> Principles and Techniques of Data Science</li>
+        <li><b>CS 61B:</b> Data Structures and Algorithms</li>
+        <li><b>CS C8:</b> The Foundations of Data Science</li>
+        <li><b>Engineering 7:</b> Intro to Computer Programming for Scientists and Engineers</li>
+      </ul>
+
+      <h3>Mathematics + Sciences </h3>
+      <ul>
+        <li><b>Math 54:</b> Linear Algebra and Differential Equations</li>
+        <li><b>Math 53:</b> Multivariable Calculus</li>
+        <li><b>Math 1A/1B:</b> Single Variable Calculus</li>
+        <li><b>Chem 4A/4B :</b> General Chemistry and Quantitative Analysis</li>
+        <li><b>Physics 7A/7B :</b> Physics for Scientists and Engineers</li>
+      </ul>
+      <h3>Miscellaneous</h3>
+      <ul>
+        <li><b>UGBA 104:</b> Introduction to Business Analytics</li>
+        <li><b>CBE 140:</b> Introduction to Chemical Process Analysis</li>
+      </ul>
+    </section>
+    <footer>
+      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+      </p>
+    </footer>
+  </div>
+  <script src="javascripts/scale.fix.js"></script>
+</body>
+
 </html>
