--- a/index.html
+++ b/index.html
@@ -31,59 +31,73 @@
     <section>
 
       <p>Hi! My name is Romain Priour, and I am Software Engineer with
-        2+ years of full stack experience specializing in Java, Python and Javascript, and a graduate of the UC Berkeley
+        2+ years of full stack (with an emphasis on backend) experience specializing in Java, Python and Javascript, and
+        a graduate of the UC Berkeley
         Class of 2022 with a Bachelors in
         Computer Science. I am a motivated learner who
         enjoys building and maintaining scalable
-        and robust enterprise applications. I also love the product side of software development, and have a passion for
-        working with product managers and stakeholders
-        to provide the most desired functionality. My hobbies include playing tennis, lifting weights, going to the
-        beach, and I am a very outgoing person who loves spending time
-        with my friends.
+        and robust enterprise applications. My hobbies include playing tennis, working out, snowboarding, and electronic
+        music.
       </p>
 
       <h2>Professional Experience</h2>
-      <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP
-          Next Talent</a> September 2022 - Present </h3>
-      <h4>Second + Third Rotation: March 2023 - Present</h4>
+      <h3>Backend Engineer, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> Business Network:
+        September 2023 - Present</h3>
       <ul>
         <li>
-          Leading the development of the new custom tasks feature for the Onboarding 2.0 component of Successfactors,
-          SAP’s human capital management software with over 2,200 corporate customers spread over 6,000+ tenants.
+          Designed and implemented features for a standalone microservice, utilizing asynchronous Kafka messaging to
+          parse, process and route over 2 million documents per hour.
         </li>
         <li>
-          Leveraging our in-house automation testing framework to increase test coverage of APIs and UI components to
+          Conducted technical research for new features by identifying functional requirements, analyzing tradeoffs, and
+          authoring architecture diagrams, which were presented to upper management and over 100 stakeholders.
+        </li>
+        <li>
+          Led the implementation of a comprehensive end-to-end testing stack, including performance testing using
+          Gatling.
+        </li>
+        <li>
+          Leveraged company and industry standards to document a standardized logging format and created a distributed
+          tracing library, enhancing the integration of logs, traces and metrics within our microservice ecosystem.
+        </li>
+      </ul>
+      <h3>Software Engineer <a href="https://jobs.sap.com/content/SAP-Next-Talent/?locale=en_US" target="_blank">SAP
+          Next Talent</a> September 2022 - September 2023 </h3>
+      <h4>Second Rotation: March 2023 - September 2023</h4>
+      <ul>
+        <li>
+          Led the development of front-end components and Spring APIs for a new feature in the Onboarding module of
+          SuccessFactors, improving the customizability of the platform for thousands of corporate customers.
+        </li>
+        <li>
+          Leveraged our in-house automation testing framework to increase test coverage of APIs and UI components to
           over 85%.
-        </li>
-        <li>
-          Technologies: Java (Spring), Javascript (SAPUI5)
         </li>
       </ul>
       <h4>First Rotation: September 2022 - March 2023</h4>
       <ul>
-        <li>Worked on the release of SAP SalesCloud, a mobile CRM tool with over 20 corporate customers on launch.</li>
-        <li>
-          Increased test coverage by over 30% in the few weeks between joining the team and the release deadline,
-          enabling the team to reach the threshold required for release.
+        <li>Developed key features in Kotlin for the launch of an Android application with over 20 corporate customers.
         </li>
         <li>
-          Engineered a scalable and reusable caching framework, improving the loading efficiency of various pages by
-          over 80%.
+          Increased test coverage by over 30%, enabling the team to reach the required threshold for release.
         </li>
         <li>
-          Technologies: Kotlin
+          Engineered a scalable and reusable client-side caching framework, improving the loading efficiency of various
+          pages by over 80%.
         </li>
       </ul>
       <h3>Mobile Integration Developer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : June
         2022 - September 2022 </h3>
       <ul>
         <li>
-          Developed a POC using SAPUI5 and Odata services for a platform which enables users to modify the
-          configurations of the various applications present within the SAP mobile engineering ecosystem.
+          Developed a proof of concept (POC) using SAPUI5 and Odata services for a web platform which enables users to
+          modify their configurations for the various applications within the SAP mobile engineering ecosystem.
         </li>
         <li>
-          Utilized Figma to design the UI and process flow of the application and created over an hour of video content
-          and 25 pages of text documentation.
+          Utilized Figma to design the UI and process flow of the application.
+        </li>
+        <li>
+          Created over an hour of video content and 25 pages of text documentation to streamline the handover process.
         </li>
       </ul>
       <h3>Full Stack Software Engineer Intern, <a href="https://www.sap.com/index.html" target="_blank">SAP</a> : April
@@ -99,11 +113,9 @@
           production.
         </li>
         <li>
-          Standardized the onboarding and deployment process by containerizing the application, reducing setup time by
-          over 95% and eliminating the risk of human error in deployment.
-        </li>
-        <li>
-          Technologies: Python (Flask), React, Docker, PostgreSQL
+          Standardized the onboarding and deployment process of the Next Talent matching application by leveraging
+          Docker containers, reducing setup time by over 95%, deployment time by 90%, and significantly reducing the
+          possibility of human error.
         </li>
       </ul>
 
@@ -122,10 +134,12 @@
 
       <h2>Skills</h2>
       <ul>
-        <b>Programming Languages:</b> Java (Proficient), JavaScript (Proficient), Python (Proficient), Kotlin (Familiar)
+        <b>Programming Languages:</b> Java (Proficient), Javascript (Proficient), Python (Proficient), Kotlin
+        (Proficient), Go (Familiar)
       </ul>
       <ul>
-        <b>Technologies:</b> Spring, React, Flask, PostgreSQL, MongoDB, Docker, Kubernetes, JUnit
+        <b>Technologies:</b> Spring, React, Flask, SQL, PostgreSQL, MongoDB, Docker, Kubernetes, JUnit, Cucumber,
+        Gatling, Karate, Bash, Apache Kafka, Dynatrace, OpenTelemetry
       </ul>
 
       <h2>Projects</h2>
